--- a/PP4_WebSite/src/style.css
+++ b/PP4_WebSite/src/style.css
@@ -79,7 +79,7 @@ main{
 .movie-info span{
     background-color: var(--primary-color);
     padding: 0.25rem 0.5rem;
-    border-radius: 3xp;
+    border-radius: 3px;
     font-weight: bold;
 }
 
@@ -93,4 +93,22 @@ main{
 
 .movie-info span.red{
     color: red;
+}
+#genre-tags{
+    width:80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+}
+.genres{
+    color: white;
+    padding: 10px 20px;
+    background-color: palevioletred;
+    border-radius: 50px;
+    margin: 5px;
+    display: inline-block;
+    cursor: pointer;
+
 }
