--- a/PP4_WebSite/src/style.css
+++ b/PP4_WebSite/src/style.css
@@ -187,3 +187,13 @@ main{
     color: white;
     font-weight: bold;
 }
+
+.profile{
+    color: rgba(255, 255, 255, 0.719);
+    padding: 10px 20px;
+    background-color: hsla(330, 1%, 69%, 0.74);
+    border-radius: 100px;
+    margin: 5px;
+    display: inline-block;
+    cursor: pointer;
+}
