--- a/PP4_WebSite/src/style.css
+++ b/PP4_WebSite/src/style.css
@@ -197,3 +197,16 @@ main{
     display: inline-block;
     cursor: pointer;
 }
+
+.random-btn{
+    color: white;
+    padding: 10px 20px;
+    background-color: hsl(340, 57%, 64%);
+    border-radius: 50px;
+    margin: 5px;
+    font-size: 1rem;
+    display: inline-block;
+    cursor: pointer;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+}
