--- a/PP4_WebSite/src/style.css
+++ b/PP4_WebSite/src/style.css
@@ -101,6 +101,21 @@ main{
     color: red;
 }
 
+.overview{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: hsla(0, 0%, 0%, 0.788);
+    padding: 1rem;
+    max-height: 100%;
+    transform: translatey(101%);
+    transition: transform 0.3s ease-in;
+}
+
+.movie:hover .overview{
+    transform: translateY(0);
+}
 
 .Home-tag {
     color: white;
