--- a/PP4_WebSite/src/style.css
+++ b/PP4_WebSite/src/style.css
@@ -5,7 +5,7 @@
 }
 
 :root{
-    --primary-color:hsl(240, 8%, 50%);
+    --primary-color:hsl(240, 15%, 33%);
     --secondary-color: hsl(0, 1%, 14%);
 }
 
@@ -60,6 +60,7 @@ main{
     background-color: var(--secondary-color);
     position:relative;
     overflow: hidden;
+    height: 451px;
     
 }
 
@@ -76,7 +77,7 @@ main{
 }
 
 .movie-info span{
-    background-color: var(--primary-color);
+    background-color: hsla(340, 12%, 5%, 0.911);
     padding: 0.25rem 0.5rem;
     border-radius: 50px;
     font-weight: bold;
@@ -100,7 +101,7 @@ main{
     left: 0;
     right: 0;
     padding: 0.5rem 1rem;
-    background-color: hsla(0, 0%, 0%, 0.7); /* Dark semi-transparent background */
+    background-color: hsla(330, 64%, 33%, 0.363); /* Dark semi-transparent background */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -114,7 +115,7 @@ main{
     left: 0;
     right: 0;
     padding: 1rem;
-    background-color: hsla(0, 0%, 0%, 0.7); /* Dark background */
+    background-color: hsla(0, 0%, 0%, 0.767); /* Dark background */
     transform: translateY(100%);
     transition: transform 0.3s ease-in-out;
     color: white;
@@ -280,9 +281,10 @@ main{
 }
 
 .provider-container {
+
     display: flex; /* Use flexbox for layout */
     flex-wrap: wrap; /* Wrap to the next line if needed */
-    justify-content: center; /* Center the images */
+    justify-content: left; /* Center the images */
     gap: 20px; /* Space between items */
     padding: 0px; /* Padding inside the container */
     height: 50px;
@@ -303,30 +305,35 @@ main{
 }
 
 .streaming-title{
-    text-align: center;
+    text-align: left;
 }
 
 .buy-title{
-    text-align: center;
+    text-align: left;
 }
 
 .rent-title{
-    text-align: center;
+    text-align: left;
 }
 .notA{
-    text-align: center;
+    text-align: left;
 }
 .movie-detail-container {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
+    left: 300px;
+    right: 300px;
     margin: 1rem;
-    background-color: hsla(0, 0%, 31%, 0.445);
+    background-color: hsla(337, 36%, 34%, 0.445);
     height: 700px;
     border-radius: 70px;
 }
 
 .movie-detail {
+    position: absolute;
+    left:10px;
     display: flex;
     align-items: flex-start;
     gap: 2rem; /* Adjust gap as needed */
@@ -337,18 +344,25 @@ main{
 }
 
 .movie-poster {
+    
     width: 300px; /* Adjust width as needed */
     height: auto;
     border-radius: 8px;
-    box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.3);
+    bottom: -221px;
+    box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.541);
 }
 
 .info-wrapper {
-    flex: 1; /* Takes up remaining space */
+    flex:1;
+    
 }
 
 .movie-title {
+    position: relative;
     margin-bottom: 0.5rem;
+    font: bold;
+    font-size: 150%;
+    font-style: italic;
 }
 
 .synopsis {
