--- a/PP4_WebSite/src/style.css
+++ b/PP4_WebSite/src/style.css
@@ -78,9 +78,10 @@ main{
 
 .movie-info span{
     background-color: hsla(340, 12%, 5%, 0.911);
-    padding: 0.25rem 0.5rem;
-    border-radius: 50px;
+    padding: 0.50rem 1rem;
+    border-radius: 100px;
     font-weight: bold;
+    size-adjust: 1000px;
 }
 
 .movie-info span.green{
@@ -301,7 +302,8 @@ main{
     height: auto; 
     border-radius: 20px; 
     margin: 0px; 
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    
 }
 
 .streaming-title{
@@ -371,6 +373,12 @@ main{
 
 .genres {
     margin-bottom: 0.5rem;
+}
+strong{
+    font-weight: bold;
+    font-style: italic;
+    
+    margin-right: 5px;
 }
 
 
